# Kulyk-goit-PythonWeb-HW-04

./: Dockerfile  index.html  main.py  message.html  pyproject.toml
storage/: data.json
